# court_detection

./: .gitignore  CMakeLists.txt  README.md  main.cpp
prototyping/: .gitignore  prototyping.ipynb  setup.py
prototyping/src/cv/: image_processing.py
prototyping/src/modules/: court_detection.py
prototyping/src/utils/: court_definition.py  utils.py
src/: CMakeLists.txt
src/cv/: CMakeLists.txt  image_processing.cpp  image_processing.hpp
src/modules/: CMakeLists.txt  court_detection.cpp  court_detection.hpp
src/modules/courtdetector/: CMakeLists.txt  court_detection.cpp  court_detection.hpp  courtdetector.cpp  courtdetector.hpp  operations.cpp  operations.hpp
src/utils/: CMakeLists.txt  court.cpp  court.hpp  utils.cpp  utils.hpp
